v 0.3 Added display functionality

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="display">display</div>
+        <div class="display"></div>
         <div class="buttons">
+            <button class="clear"> A/C </button>
             <div class="numbers">
                 <div>
                     <button>7</button>
