--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="display"></div>
         <div class="buttons">
-            <button class="clear"> A/C </button>
+            <button class="clearButton"> A/C </button>
             <div class="numbers">
                 <div>
                     <button>7</button>
