--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                     <button>2</button>
                     <button>3</button>
                 </div>
-                <div>
-                    <button>0</button>
+                <div class="fourthRow">
+                    <button id="zero">0</button>
                     <button>.</button>
-                    <button> = </button>
                 </div>
+                <button class="equal"> = </button>
             </div>
-            <div class="operator">
-                <button>+</button>
-                <button>-</button>
-                <button>*</button>
-                <button>/</button>
+            <div class="operators">
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">*</button>
+                <button class="operator">/</button>
             </div>
         </div>
         
