v 0.8 Added some styles and removed console.log

--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="display"></div>
-        <div class="buttons">
-            <button class="clearButton"> A/C </button>
+        <div class="displayContent">
+            <span class="display"></span>
+        </div>
+        <div class="buttons">   
             <div class="numbers">
-                <div>
+                <div class="firstRow">
                     <button>7</button>
                     <button>8</button>
                     <button>9</button>
                 </div>
-                <div>
+                <div class="secondRow">
                     <button>4</button>
                     <button>5</button>
                     <button>6</button>
                 </div>
-                <div>
+                <div class="thirdRow">
                     <button>1</button>
                     <button>2</button>
                     <button>3</button>
@@ -33,7 +34,10 @@
                     <button id="zero">0</button>
                     <button>.</button>
                 </div>
-                <button class="equal"> = </button>
+                <div class="fifthRow">
+                    <button class="equal"> = </button>
+                    <button class="clearButton"> A/C </button>
+                </div>
             </div>
             <div class="operators">
                 <button class="operator">+</button>
